--- a/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Japan.cshtml
@@ -54,103 +54,101 @@
 
 
 
-
-
-    <section class="timeline" id="japan-timeline">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 offset-lg-1">
-                    <div class="site-timeline-content">
-                        <!-- Article -->
-                        <div class="de-timeline-article odd">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/late1800s.jpg")" alt="The Last of us"></div>
-                                </div>
+<section class="timeline" id="japan-timeline">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 offset-lg-1">
+                <div class="site-timeline-content">
+                    <!-- Article -->
+                    <div class="de-timeline-article odd">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Japan/late1800s.jpg")" alt="The Last of us">
+                        </div>
+                        <div class="content-right-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">Late 1800s</h4>
                             </div>
-                            <div class="content-right-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">Late 1800s</h4>
+                            <div class="content-right">
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Beginnings of Migration</div>
+                                    <p class="fs-6">Japanese began to emigrate to Australia, working in pearling in northern Australia and other industries.</p>
                                 </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">Beginnings of Migration</h3>
-                                    <p>Japanese began to emigrate to Australia, working in pearling in northern Australia and other industries.</p>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
                             </div>
                         </div>
-                        <!-- // Article -->
-                        <!-- Article -->
-                        <div class="de-timeline-article even">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">1901</h4>
-                                </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">Immigration Restriction Act</h3>
-                                    <p>Passage of the act restricted non-European immigrants, including Japanese; however, some were exempted from the dictation test by 1904.</p>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/1901 act.png")" alt="The Last of us"></div>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
-                            </div>
+                        <div class="meta-dot">
                         </div>
-                        <!-- // Article -->
-                        <!-- Article -->
-                        <div class="de-timeline-article odd">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/1944.jpg")" alt="The Last of us"></div>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">1941-1947</h4>
-                                </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">WW II and Internment</h3>
-                                    <p>During the war against Japan, the Japanese population in Victoria was interned and mostly deported afterward.</p>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
-                            </div>
-                        </div>
-                        <!-- // Article -->
-                        <!-- Article -->
-                        <div class="de-timeline-article even">
-                            <div class="site-center-line"></div>
-                            <div class="content-left-container">
-                                <div class="year__">
-                                    <div class="d-line"></div>
-                                    <h4 class="de-timeline-year">1973-2016</h4>
-                                </div>
-                                <div class="content-right">
-                                    <h3 class="de-timeline-title">Growth and Cultural Integration</h3>
-                                    <p>After the end of the White Australia policy, the Japan-born population in Victoria grew, culminating in a community of 8,515 by 2016.</p>
-                                </div>
-                            </div>
-                            <div class="content-right-container">
-                                <div class="owl-single-dots owl-carousel owl-theme">
-                                    <div class="item"><img class="timeline-image" src="@Url.Content("~/Content/Customer/images/timeline/Japan/Japanese.png")" alt="The Last of us"></div>
-                                </div>
-                            </div>
-                            <div class="meta-dot">
-                            </div>
-                        </div>
-                        <!-- // Article -->
                     </div>
+                    <!-- // Article -->
+                    <!-- Article -->
+                    <div class="de-timeline-article even">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">1901</h4>
+                            </div>
+                            <div class="content-right">
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Immigration Restriction Act</div>
+                                    <p class="fs-6">Passage of the act restricted non-European immigrants, including Japanese; however, some were exempted from the dictation test by 1904.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content-right-container">
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Japan/1901 act.png")" alt="The Last of us">
+                        </div>
+                        <div class="meta-dot">
+                        </div>
+                    </div>
+                    <!-- // Article -->
+                    <!-- Article -->
+                    <div class="de-timeline-article odd">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Japan/1944.jpg")" alt="The Last of us">
+                        </div>
+                        <div class="content-right-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">1941-1947</h4>
+                            </div>
+                            <div class="content-right">
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">WW II and Internment</div>
+                                    <p class="fs-6">During the war against Japan, the Japanese population in Victoria was interned and mostly deported afterward.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="meta-dot">
+                        </div>
+                    </div>
+                    <!-- // Article -->
+                    <!-- Article -->
+                    <div class="de-timeline-article even">
+                        <div class="site-center-line"></div>
+                        <div class="content-left-container">
+                            <div class="year__">
+                                <div class="d-line"></div>
+                                <h4 class="de-timeline-year">1973-2016</h4>
+                            </div>
+                            <div class="content-right">
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Growth and Cultural Integration</div>
+                                    <p class="fs-6">After the end of the White Australia policy, the Japan-born population in Victoria grew, culminating in a community of 8,515 by 2016.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content-right-container">
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Japan/Japanese.png")" alt="The Last of us">
+                        </div>
+                        <div class="meta-dot">
+                        </div>
+                    </div>
+                    <!-- // Article -->
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
