--- a/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Philipines.cshtml
@@ -45,8 +45,7 @@
 </section>
 
 
-
-<section class="timeline" id="philipines-timeline">
+<section class="timeline" id="philippines-timeline">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 offset-lg-1">
@@ -55,9 +54,7 @@
                     <div class="de-timeline-article odd">
                         <div class="site-center-line"></div>
                         <div class="content-left-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/early 20.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Phili/early 20.jpg")" alt="The Last of us">
                         </div>
                         <div class="content-right-container">
                             <div class="year__">
@@ -65,8 +62,10 @@
                                 <h4 class="de-timeline-year">Early 20th Century</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">The Foundation Years</h3>
-                                <p>The Filipino community in Victoria starts with just 16 people, facing restrictions under Australian policies.</p>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">The Foundation Years</div>
+                                    <p class="fs-6">The Filipino community in Victoria starts with just 16 people, facing restrictions under Australian policies.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="meta-dot">
@@ -82,14 +81,14 @@
                                 <h4 class="de-timeline-year">1950s</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">New Beginnings Under the Colombo Plan</h3>
-                                <P>Relaxation of the White Australia Policy and the Colombo Plan brings Filipino students and skilled professionals to Victoria.</P>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">New Beginnings Under the Colombo Plan</div>
+                                    <p class="fs-6">Relaxation of the White Australia Policy and the Colombo Plan brings Filipino students and skilled professionals to Victoria.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="content-right-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1950.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Phili/1950.jpg")" alt="The Last of us">
                         </div>
                         <div class="meta-dot">
                         </div>
@@ -99,9 +98,7 @@
                     <div class="de-timeline-article odd">
                         <div class="site-center-line"></div>
                         <div class="content-left-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/1970.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Phili/1970.jpg")" alt="The Last of us">
                         </div>
                         <div class="content-right-container">
                             <div class="year__">
@@ -109,8 +106,10 @@
                                 <h4 class="de-timeline-year">1970s</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">Significant Increase in Immigration.</h3>
-                                <P>The Filipino population grows from 467 in 1971 to 3,455 by 1981, driven by the end of restrictive policies and political unrest in the Philippines.</P>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Significant Increase in Immigration</div>
+                                    <p class="fs-6">The Filipino population grows from 467 in 1971 to 3,455 by 1981, driven by the end of restrictive policies and political unrest in the Philippines.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="meta-dot">
@@ -126,14 +125,14 @@
                                 <h4 class="de-timeline-year">1981-2016</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">Remarkable Community Growth</h3>
-                                <P>One of the most dramatic increases in Victoria's demographics, with the Filipino population reaching 51,287, supported by the Family Reunion Program.</P>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Remarkable Community Growth</div>
+                                    <p class="fs-6">One of the most dramatic increases in Victoria's demographics, with the Filipino population reaching 51,287, supported by the Family Reunion Program.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="content-right-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/Phili/2016.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/Phili/2016.jpg")" alt="The Last of us">
                         </div>
                         <div class="meta-dot">
                         </div>
@@ -144,6 +143,3 @@
         </div>
     </div>
 </section>
-
-
-
