--- a/TP03MainProj/Views/Education/CountryStory/Vietnam.cshtml
+++ b/TP03MainProj/Views/Education/CountryStory/Vietnam.cshtml
@@ -40,8 +40,6 @@
     </div>
 </section>
 
-
-
 <section class="timeline" id="vietnam-timeline">
     <div class="container">
         <div class="row">
@@ -51,9 +49,7 @@
                     <div class="de-timeline-article odd">
                         <div class="site-center-line"></div>
                         <div class="content-left-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/1975.webp")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/vietna/1975.webp")" alt="The Last of us">
                         </div>
                         <div class="content-right-container">
                             <div class="year__">
@@ -61,8 +57,10 @@
                                 <h4 class="de-timeline-year">Pre-1975</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">War and Early Migration</h3>
-                                <p>The initial Vietnamese presence in Victoria, marked by war orphans, Vietnamese wives of Australian servicemen, and students.</p>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">War and Early Migration</div>
+                                    <p class="fs-6">The initial Vietnamese presence in Victoria, marked by war orphans, Vietnamese wives of Australian servicemen, and students.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="meta-dot">
@@ -78,14 +76,14 @@
                                 <h4 class="de-timeline-year">1976</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">First Census Count</h3>
-                                <p>Vietnamese-born Victorians officially counted, numbering 382.</p>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">First Census Count</div>
+                                    <p class="fs-6">Vietnamese-born Victorians officially counted, numbering 382.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="content-right-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/1976.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/vietna/1976.jpg")" alt="The Last of us">
                         </div>
                         <div class="meta-dot">
                         </div>
@@ -95,9 +93,7 @@
                     <div class="de-timeline-article odd">
                         <div class="site-center-line"></div>
                         <div class="content-left-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/post1975.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/vietna/post1975.jpg")" alt="The Last of us">
                         </div>
                         <div class="content-right-container">
                             <div class="year__">
@@ -105,8 +101,10 @@
                                 <h4 class="de-timeline-year">Post-1975</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title"></h3>
-                                <p>Significant refugee arrivals following the end of the Vietnam War, with many fleeing political changes and hardship.</p>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Significant Refugee Arrivals</div>
+                                    <p class="fs-6">Significant refugee arrivals following the end of the Vietnam War, with many fleeing political changes and hardship.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="meta-dot">
@@ -122,14 +120,14 @@
                                 <h4 class="de-timeline-year">1981</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">Rapid Growth</h3>
-                                <p>The Vietnamese-born population in Victoria exceeds 12,000, with many finding employment in trade and production.</p>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Rapid Growth</div>
+                                    <p class="fs-6">The Vietnamese-born population in Victoria exceeds 12,000, with many finding employment in trade and production.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="content-right-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/after1975.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/vietna/after1975.jpg")" alt="The Last of us">
                         </div>
                         <div class="meta-dot">
                         </div>
@@ -139,10 +137,7 @@
                     <div class="de-timeline-article odd">
                         <div class="site-center-line"></div>
                         <div class="content-left-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/community.jpg")" alt="The Last of us"></div>
-
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/vietna/community.jpg")" alt="The Last of us">
                         </div>
                         <div class="content-right-container">
                             <div class="year__">
@@ -150,8 +145,10 @@
                                 <h4 class="de-timeline-year">1982</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">Family Reunion Focus</h3>
-                                <p>Australia and Vietnam establish an orderly migration program, leading to further community growth.</p>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Family Reunion Focus</div>
+                                    <p class="fs-6">Australia and Vietnam establish an orderly migration program, leading to further community growth.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="meta-dot">
@@ -167,14 +164,14 @@
                                 <h4 class="de-timeline-year">1982-Now</h4>
                             </div>
                             <div class="content-right">
-                                <h3 class="de-timeline-title">Contemporary Achievements</h3>
-                                <p>Today, over 68,000 Vietnam-born individuals contribute to Victorian society through diverse professions, businesses, and cultural activities.</p>
+                                <div class="mt-5 fs-4">
+                                    <div class="de-timeline-title fw-bold">Contemporary Achievements</div>
+                                    <p class="fs-6">Today, over 68,000 Vietnam-born individuals contribute to Victorian society through diverse professions, businesses, and cultural activities.</p>
+                                </div>
                             </div>
                         </div>
                         <div class="content-right-container">
-                            <div class="owl-single-dots owl-carousel owl-theme">
-                                <div class="item"><img src="@Url.Content("~/Content/Customer/images/timeline/vietna/after1981.jpg")" alt="The Last of us"></div>
-                            </div>
+                            <img class="timeline-image mt-5" src="@Url.Content("~/Content/Customer/images/timeline/vietna/after1981.jpg")" alt="The Last of us">
                         </div>
                         <div class="meta-dot">
                         </div>
@@ -185,6 +182,3 @@
         </div>
     </div>
 </section>
-
-
-
