--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -40,12 +40,12 @@
                 </ul>
             </li>
             <li class="nav-item">
-                <a href="#philippines-story" class="country-link btn-toggle toggle-link" aria-expanded="false">Philippines</a>
+                <a href="#philipines-story" class="country-link btn-toggle toggle-link" aria-expanded="false">Philippines</a>
                 <ul class="sub-nav" style="display: none;">
-                    <li><a href="#philippines-story" class="country-link">Overview</a></li>
-                    <li><a href="#philippines-timeline" class="country-link">Timeline</a></li>
-                    <li><a href="#philippines-data" class="country-link">Data Insight</a></li>
-                    <li><a href="#philippines-migration" class="country-link">Migration Stories</a></li>
+                    <li><a href="#philipines-story" class="country-link">Overview</a></li>
+                    <li><a href="#philipines-timeline" class="country-link">Timeline</a></li>
+                    <li><a href="#philipines-data" class="country-link">Data Insight</a></li>
+                    <li><a href="#philipines-migration" class="country-link">Migration Stories</a></li>
                 </ul>
             </li>
             <li class="nav-item">
