redesign submit button

--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -148,20 +148,23 @@
 
 
 
-    <style>
-        .form-check-label {
-            margin-left: 5px;
-        }
-    </style>
+
 
     <!-- Modified the width of the calender to see if it fits -->
     <!-- Add CSS for the quiz section -->
 
     <style>
+        .form-check-label {
+            margin-left: 5px;
+        }
+        .submit-button {
+            width:140px;
+            height:60px;
+        }
         /* General card styling for each question */
         .quiz-img {
-            width:100%;
-            height:auto;
+            width: 100%;
+            height: auto;
         }
         .question.card {
             margin-bottom: 1rem;
