--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -91,285 +91,48 @@
         </div>
     </div>
 
-    @*story part*@
+    @*Story part*@
     <div class="row">
         <div class="container-fluid">
-            <div id="china-story" class="story-item" style="display: none;">
-                @Html.Partial("~/Views/Education/CountryStory/China.cshtml", "China")
+            @foreach (var country in new[] { "China", "Japan", "Korea", "Philipines", "Vietnam" })
+            {
+                var countryId = country.ToLower();
+                <div id="@($"{countryId}-story")" class="story-item" style="display: none;">
+                    @Html.Partial($"~/Views/Education/CountryStory/{country}.cshtml", country)
 
-                <div class="bg-grey text-dark pb-5" id="china-data">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6 p-3" style="height:100px;">
-                                <h1 class="mb-4">China data</h1>
+                    <div class="bg-light text-dark pb-5" id="@($"{countryId}-data")">
+                        <div class="container">
+                            <div class="row display-3 p-5 fw-bold justify-content-center">@($"{country} Chart")</div>
+
+                            <!-- Dropdown for selecting the chart type -->
+                            <div class="row justify-content-center mb-4">
+                                <div class="col-md-10">
+                                    <select class="form-select chart-type-selector" id="@($"{countryId}-chart-selector")">
+                                        <option value="population-chart" selected>Population</option>
+                                        <option value="occupation-chart">Occupation</option>
+                                        <option value="religion-chart">Religion</option>
+                                    </select>
+                                </div>
                             </div>
+
+                            <!-- Population Chart Container -->
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 p-1 mt-5">
+                                    <div id="@($"{countryId}-population-chart")" class="chart-container"></div>
+                                    <div id="@($"{countryId}-occupation-chart")" style="display: none;" class="chart-container"></div>
+                                    <div id="@($"{countryId}-religion-chart")" style="display: none;" class="chart-container"></div>
+                                </div>
+                            </div>
+   
                         </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                                <!-- Reduced from col-md-3 -->
-                            </div>
-
-                            <div class="col-md-8 p-1 mt-5">
-                                <!-- Increased from col-md-6 -->
-                                <div id="china-age" class="canvasjs-chart-container"></div>
-                            </div>
-                            <div class="col-md-2">
-                                <!-- Reduced from col-md-3 -->
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                                <!-- Reduced from col-md-3 -->
-                            </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="china-occupa" class="canvasjs-chart-container"></div>
                     </div>
-                    <div class="col-md-2">
-                        <!-- Reduced from col-md-3 -->
-                    </div>
+
+                    @Html.Partial($"~/Views/Education/MigrationStories/{country}Story.cshtml", country)
                 </div>
-
-                <!-- For the Stream Chart -->
-                <div class="row align-items-center">
-                    <div class="col-md-2">
-                    </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="china-population-chart" class="chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-                @Html.Partial("~/Views/Education/MigrationStories/ChinaStory.cshtml", "China")
-
-            </div>
-
-            <div id="japan-story" class=" story-item" style="display: none;">
-
-                @Html.Partial("~/Views/Education/CountryStory/Japan.cshtml", "Japan")
-
-
-                <div class="bg-grey text-dark pb-5" id="japan-data">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6 p-3" style="height:100px;">
-                                <h1 class="mb-4">Japan data</h1>
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                            <div class="col-md-8 p-1 mt-5">
-                                <!-- Increased from col-md-6 -->
-                                <div id="japan-age" class="canvasjs-chart-container"></div>
-                            </div>
-                            <div class="col-md-2">
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="japan-occupa" class="canvasjs-chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-
-                <!-- For the Stream Chart -->
-                <div class="row align-items-center">
-                    <div class="col-md-2">
-                    </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="japan-population-chart" class="chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-                @Html.Partial("~/Views/Education/MigrationStories/JapanStory.cshtml", "Japan")
-
-            </div>
-
-            <div id="korea-story" class=" story-item" style="display: none;">
-
-                @Html.Partial("~/Views/Education/CountryStory/Korea.cshtml", "Korea")
-
-
-                <div class="bg-grey text-dark pb-5" id="korea-data">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6 p-3" style="height:100px;">
-                                <h1 class="mb-4">Korea data</h1>
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                            <div class="col-md-8 p-1 mt-5">
-                                <!-- Increased from col-md-6 -->
-                                <div id="korea-age" class="canvasjs-chart-container"></div>
-                            </div>
-                            <div class="col-md-2">
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="korea-occupa" class="canvasjs-chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-
-                <!-- For the Stream Chart -->
-                <div class="row align-items-center">
-                    <div class="col-md-2">
-                    </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="korea-population-chart" class="chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-                @Html.Partial("~/Views/Education/MigrationStories/KoreaStory.cshtml", "Korea")
-
-
-            </div>
-
-            <div id="philipines-story" class=" story-item" style="display: none;">
-
-                @Html.Partial("~/Views/Education/CountryStory/Philipines.cshtml", "Philipines")
-
-
-                <div class="bg-grey text-dark pb-5" id="philipines-data">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6 p-3" style="height:100px;">
-                                <h1 class="mb-4">Philipines data</h1>
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                            <div class="col-md-8 p-1 mt-5">
-                                <!-- Increased from col-md-6 -->
-                                <div id="philipines-age" class="canvasjs-chart-container"></div>
-                            </div>
-                            <div class="col-md-2">
-                            </div>
-                        </div>
-
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="philipines-occupa" class="canvasjs-chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-
-                <!-- For the Stream Chart -->
-                <div class="row align-items-center">
-                    <div class="col-md-2">
-                    </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="philippines-population-chart" class="chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-                @Html.Partial("~/Views/Education/MigrationStories/PhilipinesStory.cshtml", "Philipines")
-
-
-            </div>
-
-            <div id="vietnam-story" class=" story-item" style="display: none;">
-
-                @Html.Partial("~/Views/Education/CountryStory/Vietnam.cshtml", "Vietnam")
-
-
-                <div class="bg-grey text-dark pb-5" id="vietnam-data">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6 p-3" style="height:100px;">
-                                <h1 class="mb-4">Vietnam data</h1>
-                            </div>
-                        </div>
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                            <div class="col-md-8 p-1 mt-5">
-                                <!-- Increased from col-md-6 -->
-                                <div id="vietnam-age" class="canvasjs-chart-container"></div>
-                            </div>
-                            <div class="col-md-2">
-                            </div>
-                        </div>
-
-                        <div class="row align-items-center">
-                            <div class="col-md-2">
-                            </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="vietnam-occupa" class="canvasjs-chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-
-                <!-- For the Stream Chart -->
-                <div class="row align-items-center">
-                    <div class="col-md-2">
-                    </div>
-
-                    <div class="col-md-8 p-1 mt-5">
-                        <!-- Increased from col-md-6 -->
-                        <div id="vietnam-population-chart" class="chart-container"></div>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-                @Html.Partial("~/Views/Education/MigrationStories/VietnamStory.cshtml", "Vietnam")
-            </div>
+            }
         </div>
     </div>
+
 
 </section>
 
@@ -377,44 +140,13 @@
 
 
 @section Scripts{
-    <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
     @Scripts.Render("~/bundles/educationJS")
 
     <!-- For the Stream Chart -->
-    <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
     <script>
-    $(document).ready(function () {
-        $('.country-link').click(function (e) {
-            e.preventDefault();
-            var country = $(this).text().trim().toLowerCase();
-            loadChartData(country);
-        });
-    });
 
-    function loadChartData(country) {
-        $.getJSON('@Url.Action("GetCountryChartData", "Education")', { country: country }, function (data) {
-            if (!data.error) {
-                renderChart(country + '-population-chart', data.data);
-            } else {
-                console.error('Data loading error:', data.error);
-            }
-        });
-    }
 
-    function renderChart(chartId, data) {
-        var values = data.map(item => item.TotalPopulation);
-        var labels = data.map(item => item.CensusYear.toString());
-        zingchart.render({
-            id: chartId,
-            data: {
-                type: 'line',
-                series: [{ values: values }],
-                scaleX: { labels: labels }
-            },
-            height: 400,
-            width: '100%'
-        });
-    }
+
     </script>
 
 
@@ -430,6 +162,10 @@
 
     <style>
 
+        .chart-container {
+            width: 100%;
+            min-height: 500px;
+        }
 
 
         .fixed-size-image {
@@ -592,7 +328,5 @@
         .sidebar.collapsed .nav-item {
             text-align: center; /* Center icons or bullets if used */
         }
-
-
     </style>
 }
