--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -52,6 +52,7 @@
             <div class="col-md-3 text-end">
 
             </div>
+            <button id="scrollToTopBtn" title="To the Top"> ↑ </button>
         </header>
     </div>
 
