--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -41,18 +41,12 @@
             </div>
         </div>
         <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2 p-2 mt-2 mb-3  border-bottom" id="button-section">
-            <div class="col "></div>
             <div class="col text-center">
-                <a class="btn culture-btn btn-primary text-nowrap w-25" href="@Url.Action("Index", "Events")#events-nav">Events</a>
-                <a class="btn culture-btn btn-primary fs-6 w-25" href="@Url.Action("Index", "Events")#quiz-nav">Quiz</a>
-                <a class="btn culture-btn btn-primary fs-6 w-25" href="@Url.Action("Index", "Events")#attract-nav">Attraction</a>
+                <a class="btn culture-btn btn-primary text-nowrap w-25" href="#events-nav">Events</a>
+                <a class="btn culture-btn btn-primary fs-6 w-25" href="#quiz-section">Quiz</a>
+                <a class="btn culture-btn btn-primary fs-6 w-25" href="#attract-nav">Attraction</a>
             </div>
-            <div class="col-12 col-sm-6 col-md-4 text-center mb-1">
-                <a class="btn culture-btn btn-primary fs-6 mb-2 mb-md-3 mb-lg-4" href="">Quiz</a>
-            </div>
-            <div class="col-12 col-sm-6 col-md-4 text-center mb-1">
-                <a class="btn culture-btn btn-primary fs-6 mb-2 mb-md-3 mb-lg-4" href="">Attraction</a>
-            </div>
+
         </div>
 
         <div id="events-nav">
@@ -86,7 +80,7 @@
         <div class="row justify-content-center section-row bg-warning pt-5 mt-5" id="quiz-section">
             <div class="col-lg-8 col-md-10 text-center">
                 <div class="row mb-3">
-                    <h2 style="word-spacing: 8px;">Common Phrases and Cultural Etiquette Quiz</h2>
+                    <h2 style="word-spacing: 8px;" class="fw-bold">Common Phrases and Cultural Etiquette Quiz</h2>
                 </div>
 
                 <div class="row justify-content-center pb-5 pt-5 ">
